# Magic-6Ball

./: CMakeLists.txt  README.md
src/: AnswerProvider.cpp  AnswerProvider.h  ChatDatabase.cpp  ChatDatabase.h  GlobalEventFilter.cpp  GlobalEventFilter.h  main.cpp  resources.qrc
src/qml/: IntroPage.qml  Main.qml  MainPage.qml  qmldir
